syntax = "proto3";

package pb;

option go_package = "internal/pb;pb";

message IngestDataRequest {
    repeated string files = 1;
    int32 knowledge_base_id = 2;
}

message IngestDataResponse {
    string job_resource_id = 1;
}

message IngestDataStatusRequest {
    string resource_id = 1;
}

message IngestDataStatusResponse {
    string status = 1;
}